megcsináltam a backend részt már csak össze kell kötni majd a user felülettel holnap még a vonaton egy kicsit rajta alakítok majd mert a Benis data struktúra nem épp olyan mint ami nekünk kellene de az már csak favágás lesz

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Football results</string>
-    <string name="main_button_databy">data provided by</string>
-    <string name="main_add_title">Add new symbol</string>
-    <string name="main_add_message">Symbol code</string>
-    <string name="main_about_title">About</string>
-    <string name="main_about_text">App created by Csuvi</string>
+    <string name="app_name">Foci eredmények</string>
+    <string name="main_button_databy">Adatok forrása</string>
+    <string name="main_add_title">Adj hozzá egy bajnokságot</string>
+    <string name="main_add_message">A bajnokság</string>
+    <string name="main_about_title">Névjegy</string>
+    <string name="main_about_text">Appot készítette Csuvi</string>
     <string name="dialog_ok">Ok</string>
-    <string name="dialog_cancel">Cancel</string>
-    <string name="notification_check_title">Campionship results</string>
-    <string name="notification_check_test">8 hours elapsed after last check</string>
+    <string name="dialog_cancel">Mégse</string>
+    <string name="notification_check_title">Bajnokság eredményei</string>
+    <string name="notification_check_test">8 óra telt el az utolsó frissítés óta</string>
 </resources>
