--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Football results</string>
     <string name="main_button_databy">data provided by football-data</string>
-    <string name="main_add_title">Add new symbol</string>
+    <string name="main_add_title">Choose a championship</string>
     <string name="main_add_message">Symbol code</string>
     <string name="main_about_title">About</string>
     <string name="main_about_text">App created by Csuvi and Donat</string>
